--- a/src/assets/css/map_dialog.less
+++ b/src/assets/css/map_dialog.less
@@ -17,8 +17,7 @@
     color: #fff !important;
   }
   .el-dialog__headerbtn {
-    top: 5.2%;
-    // top: 16.2%;
+    top: 36px;
     right: 40px;
     width: 44px;
     height: 44px;
